[tool.poetry]
name = "steam-killer"
version = "0.1.0"
description = ""
authors = ["Daniel Souza <me@posix.dev.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.8"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
