[tool.poetry]
name = "steam-killer"
version = "0.1.0"
description = "Monitors for Steam and game processes and send SIGTERM/SIGKILL if conditions are met."
authors = ["Daniel de Souza <me@posix.dev.br>"]
homepage = "https://github.com/danisztls/steam-killer"
readme = "README.md"
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.8"
watchdog = "^3.0.0"
python-dateutil = "^2.8.2"

[tool.poetry.scripts]
steam-killer = 'steam_killer:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
